# uj-ai-club-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
.github/workflows/: build-and-push.yml
migrations/: create.sql  google_oauth_migration.sql  notebook_challenges.sql  set_admin.sql
src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
